solved issue with background picture not covering the entire screen on big screens

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ html,body {
   background: url(../img/sky.png);
   font-weight: bold;
   text-transform: uppercase;
+  background-size: cover;
 }
 html:not(:hover), body:not(:hover) {
   background-color: #157DEC;
